--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -67,6 +67,11 @@
       .login-form{
         width: 80%;
         margin: 0 auto;
+        .btn-custom{
+          background-color: #587992 !important;
+          font-family: Arial, Helvetica, sans-serif;
+          color: #fff;
+        }
       }
     }
   }
