--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                 <img src="assets/images/asc-dots.jpg" alt="asc-logo" class="asc-img-logo" />
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 right-container">
+          <div class="col-md-6 col-lg-6 right-container d-flex p-2 flex-column justify-content-center align-items-center">
               <div class="container">
                   <div class="row">
                     <div style="width: 100%" class="d-flex flex-row justify-content-center p-2 mt-5 mb-4">
@@ -25,19 +25,26 @@
                     </div>
                   </div>
                   <div class="row">
-                      <form class="login-form ">
+                      <form class="login-form" onsubmit="return false" novalidate action="#" method="POST">
                           <fieldset class="">
                               <div class="row mb-4">
-                                <div class="fill-width-container shadow-sm bg-white rounded form-group inner-addon left-addon">
+                                <div class="fill-width-container shadow bg-white rounded form-group inner-addon left-addon">
                                   <!-- <ion-icon name="person-circle-outline"></ion-icon> -->
                                   <i class="glyphicon glyphicon-user"></i>
                                     <input class="form-control custom-input" placeholder="Username or Email" />
                                 </div>
                               </div>
-                              <div class="row ">
-                                <div class="fill-width-container shadow-sm mb-5 bg-white rounded form-group inner-addon left-addon">
+                              <div class="row mb-4">
+                                <div class="fill-width-container shadow mb-5 bg-white rounded form-group inner-addon left-addon">
                                     <i class="glyphicon glyphicon-user"></i>
                                     <input class="form-control custom-input" placeholder="Password" />
+                                </div>
+                              </div>
+                              <div class="row mb-4 fill-width-container d-flex flex-row justify-content-center">
+                                <div class="fill-width-container d-flex flex-row justify-content-center">
+                                    <button type="submit" class="btn shadow btn-ripple mb-5 bg-white p-2 rounded px-5 rounded form-group inner-addon left-addon btn-custom">
+                                      Login
+                                    </button>
                                 </div>
                               </div>
                           </fieldset>
