--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,38 @@
 	transition: 0s;
 	transform: scale(0, 0);
 }
+
+.loader-wrapper{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  top:0;
+  display: none;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #5987AA;
+  border-bottom: 16px solid #5987AA;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+    position: absolute;
+    top: calc(50% - 60px);
+    left: calc(50% - 60px);
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
