--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,27 +25,36 @@
                     </div>
                   </div>
                   <div class="row">
-                      <form class="login-form" #loginForm (ngSubmit)="login(loginForm)" novalidate action="#">
+                      <form [formGroup]="loginForm"  class="login-form" (ngSubmit)="login(loginForm)" novalidate action="#">
                           <fieldset class="">
                               <div class="row mb-4">
                                 <div class="fill-width-container shadow bg-white rounded form-group inner-addon left-addon">
                                   <!-- <ion-icon name="person-circle-outline"></ionss-icon> -->
                                   <i class="glyphicon glyphicon-user"></i>
-                                    <input name="username" class="form-control custom-input" placeholder="Username or Email" />
-                                </div>
+                                    <input formControlName="username" [ngClass]="isFieldInvalid(loginForm, 'username')" name="username" class="form-control custom-input" placeholder="Username or Email" />
+
+                                  </div>
+                                  <span class="error-label" *ngIf="!usernameIsValid">Username is required</span>
                               </div>
-                              <div class="row mb-4">
-                                <div class="fill-width-container shadow mb-5 bg-white rounded form-group inner-addon left-addon">
+                              <div class="row mb-5">
+                                <div class="fill-width-container shadow bg-white rounded form-group inner-addon left-addon">
                                     <i class="glyphicon glyphicon-user"></i>
-                                    <input name="password" class="form-control custom-input" placeholder="Password" />
-                                </div>
+                                    <input formControlName="password" [ngClass]="isFieldInvalid(loginForm, 'password')" name="password" class="form-control custom-input" placeholder="Password" />
+
+                                  </div>
+                                  <span class="error-label" *ngIf="!passwordIsValid">Password is required</span>
                               </div>
-                              <div class="row mb-4 fill-width-container d-flex flex-row justify-content-center">
+                              <div class="row mb-2 fill-width-container d-flex flex-row justify-content-center">
                                 <div class="fill-width-container d-flex flex-row justify-content-center">
-                                    <button type="submit" class="btn shadow btn-ripple mb-5 bg-white p-2 rounded px-5 rounded form-group inner-addon left-addon btn-custom">
+                                    <button type="submit" class="btn shadow btn-ripple bg-white p-2 rounded px-5 rounded form-group inner-addon left-addon btn-custom">
                                       Login
                                     </button>
                                 </div>
+                              </div>
+                              <div class="row mb-5">
+                                  <p style="text-align: center; width: 100%;">
+                                    <a class="text-light">Forgot your password? Recover Password</a>
+                                  </p>
                               </div>
                           </fieldset>
                       </form>
