Make Navbar header position fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,41 @@
 <app-app-layout>
-  <p>
-    hjgoggou6
-  </p>
+  <div class="row mb-4">
+      <div class=" col-md-4 col-lg-4 col-sm-12">
+        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
+
+        </div>
+      </div>
+      <div class= "col-md-4 col-lg-4  col-sm-12">
+        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
+
+        </div>
+      </div>
+      <div class=" col-md-4 col-lg-4 col-sm-12">
+        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
+
+        </div>
+      </div>
+  </div>
+  <div class="row mb-4">
+      <div class="col-md-12 col-lg-12 col-sm-12">
+        <div class="card shadow charts-container bg-white py-4 mx-2">
+
+        </div>
+      </div>
+  </div>
+  <div class="row mb-4">
+    <div class="col-md-12 col-lg-12 col-sm-12">
+      <div class="card shadow charts-container bg-white py-4 mx-2">
+
+      </div>
+    </div>
+</div>
+<div class="row mb-4">
+  <div class="col-md-12 col-lg-12 col-sm-12">
+    <div class="card shadow charts-container bg-white py-4 mx-2">
+
+    </div>
+  </div>
+</div>
 </app-app-layout>
 
