--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
                               </div>
                               <div class="row mb-5">
                                   <p style="text-align: center; width: 100%;">
-                                    <a class="text-light">Forgot your password? Recover Password</a>
+                                    <a  class="text-light forgotpassword text-underline" [routerLink]="['/recover-password']">Forgot your password? Recover Password</a>
                                   </p>
                               </div>
                           </fieldset>
