--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -7,7 +7,7 @@
         <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
           <app-navbar></app-navbar>
         </div>
-        <div class="container">
+        <div class="container py-3"  style="overflow-y: auto;padding-top: 6.5rem !important;">
           <ng-content></ng-content>
         </div>
       </div>
