--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,12 +4,20 @@
 @media (min-width: 934px){
   .nav-links-md{
     display: none !important;
+    width: 100%;
+  }
+  .navbar{
+    width: calc(100% - 16.6666667%) !important;
   }
 }
 
 .navbar{
   background-color: #9DBDD5 !important;
   background-image: linear-gradient(#9DBDD5, #9DBDD5 60%, #9DBDD5);
+  position: fixed;
+    width: 100% ;
+    z-index: 10;
+    height: 70px;
 }
 
 .greetings{
