--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,9 +50,10 @@
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-    position: absolute;
-    top: calc(50% - 60px);
-    left: calc(50% - 60px);
+    position: fixed;
+    top: calc(50vh - 60px);
+    left: calc(50vw - 60px);
+
 }
 
 @-webkit-keyframes spin {
