Add quick logout button on navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,7 +36,7 @@
         </a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <span class="dropdown-item">Log Out</span>
+          <span class="dropdown-item" (click)="logoutUser()">Log Out</span>
         </div>
       </div>
       <!-- <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button> -->
