--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,18 @@
 .summary-container{
   min-height: 5rem;
 }
+
+.summary-counter{
+  font-size:1.2rem;
+}
+
+.sm-count{
+  font-family: Montserrat, sans-serif;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.dropdown-item{
+  cursor: pointer;
+}
