--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,41 +1,177 @@
 <app-app-layout>
+  <div class="row mb-4  mx-2 ">
+    <div class=" col-md-12  py-4 px-4 card summary-container shadow bg-white col-lg-12 col-sm-12 ">
+      <div class="row  mb-2">
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div class="form-group">
+            <label>States</label>
+            <select class="result-states" name="states[]" multiple="multiple">
+            </select>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div class="form-group">
+            <label>Local Governments</label>
+            <select class="local-governments" name="lgas[]" multiple="multiple">
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row  mb-2">
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div class="form-group">
+            <label>School</label>
+            <select class="result-schools" name="schools[]" multiple="multiple">
+            </select>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex flex-row col-lg-6 col-sm-12 justify-content-end align-items-end">
+          <button class="btn btn-primary"><i class="ion ion-funnel"></i> Click To Filter</button>
+        </div>
+      </div>
+    </div>
+
+</div>
   <div class="row mb-4">
       <div class=" col-md-4 col-lg-4 col-sm-12">
-        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
-
+        <div class="card summary-container shadow bg-white py-2 px-4 mx-2 mb-2">
+            <div>
+                <h3 class="summary-counter">Number of Schools</h3>
+            </div>
+            <div class="d-flex justify-content-end align-items-end">
+              <span class="sm-count">{{numberOfSchool | number:'3.0-0'}}</span>
+            </div>
         </div>
       </div>
       <div class= "col-md-4 col-lg-4  col-sm-12">
-        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
-
+        <div class="card summary-container shadow bg-white py-2 px-4 mx-2 mb-2">
+          <div>
+            <h3 class="summary-counter">Number of Teachers</h3>
+          </div>
+          <div class="d-flex justify-content-end align-items-end">
+            <span class="sm-count">{{numberOfTeacher | number:'3.0-0'}}</span>
+          </div>
         </div>
       </div>
       <div class=" col-md-4 col-lg-4 col-sm-12">
-        <div class="card summary-container shadow bg-white py-4 mx-2 mb-2">
-
+        <div class="card summary-container shadow bg-white py-2 px-4 mx-2 mb-2">
+          <div>
+              <h3 class="summary-counter">Number of Students</h3>
+          </div>
+          <div class="d-flex justify-content-end align-items-end">
+            <span class="sm-count">{{numberOfStudent | number:'3.0-0'}}</span>
+          </div>
         </div>
       </div>
   </div>
   <div class="row mb-4">
       <div class="col-md-12 col-lg-12 col-sm-12">
-        <div class="card shadow charts-container bg-white py-4 mx-2">
+        <div class="card shadow charts-container mx-2 bg-white py-4 px-4">
+          <h4 style="color: #000">Schools</h4>
+          <hr />
+          <form class="form-inline my-4 my-lg-0 d-flex justify-content-end align-items-end">
+            <div class="dropdown show d-flex justify-content-end align-items-end">
+              <a class="btn btn-info btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLinks" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{schoolchartType}}
+              </a>
 
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLinks">
+                <div class="dropdown-item" (click)="toggleChart('school', 'Table')" href="#">Table</div>
+                <div class="dropdown-item" (click)="toggleChart('school', 'Line Chart')" href="#">Line Chart</div>
+                <div class="dropdown-item" (click)="toggleChart('school', 'Bar Chart')" href="#">Bar Chart</div>
+              </div>
+            </div>
+          </form>
+          <div class="mt-4" >
+            <div [hidden]="!(schoolchartType === 'Line Chart' || schoolchartType === 'Bar Chart' )">
+              <canvas id="cavanas" #lineChart>
+            </canvas>
+            </div>
+            <div [hidden]="!(schoolchartType === 'Table')">
+              <table datatable [dtOptions]="dtOptions[0]"  id="dataTable-0" class="table table-striped table-bordered" style="width:100%">
+
+              </table>
+            </div>
+          </div>
+
+          <!-- <div class="d-flex justify-content-end align-items-end">
+
+          </div> -->
         </div>
       </div>
   </div>
   <div class="row mb-4">
     <div class="col-md-12 col-lg-12 col-sm-12">
-      <div class="card shadow charts-container bg-white py-4 mx-2">
+      <div class="card shadow charts-container bg-white py-4 px-4 mx-2">
+        <h4 style="color: #000">Teachers</h4>
+        <hr />
+        <div class="dropdown show d-flex justify-content-end align-items-end">
+          <button  class="btn btn-info btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLinks" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{teacherChartType}}
+          </button>
 
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLinks">
+            <div class="dropdown-item" (click)="toggleChart('teacher', 'Table')" >Table</div>
+            <div class="dropdown-item" (click)="toggleChart('teacher', 'Line Chart')" >Line Chart</div>
+            <div class="dropdown-item" (click)="toggleChart('teacher', 'Bar Chart')" >Bar Chart</div>
+          </div>
+        </div>
+        <div class="mt-4" >
+          <div [hidden]="!(teacherChartType === 'Line Chart' || teacherChartType === 'Bar Chart' )">
+            <canvas id="cavanas" #lineChart1>
+          </canvas>
+          </div>
+          <div [hidden]="!(teacherChartType === 'Table')">
+            <table datatable [dtOptions]="dtOptions[1]"  id="dataTable-0" class="table table-striped table-bordered" style="width:100%">
+
+            </table>
+          </div>
+        </div>
       </div>
     </div>
 </div>
 <div class="row mb-4">
   <div class="col-md-12 col-lg-12 col-sm-12">
-    <div class="card shadow charts-container bg-white py-4 mx-2">
+    <div class="card shadow charts-container bg-white py-4 px-4 mx-2">
+      <h4 style="color: #000">Students</h4>
+      <hr />
+      <div class="dropdown show d-flex justify-content-end align-items-end">
+        <button class="btn btn-info btn-sm dropdown-toggle" role="button" id="dropdownMenuLinks" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{studentChartType}}
+        </button>
 
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLinks">
+          <div class="dropdown-item" (click)="toggleChart('student', 'Table')" href="#">Table</div>
+          <div class="dropdown-item" (click)="toggleChart('student', 'Line Chart')" href="#">Line Chart</div>
+          <div class="dropdown-item" (click)="toggleChart('student', 'Bar Chart')" href="#">Bar Chart</div>
+        </div>
+      </div>
+      <div class="mt-4" >
+        <div [hidden]="!(studentChartType === 'Line Chart' || studentChartType === 'Bar Chart' )">
+          <canvas id="cavanas" #lineChart2>
+        </canvas>
+        </div>
+        <div [hidden]="!(studentChartType === 'Table')">
+          <table datatable [dtOptions]="dtOptions[2]"  id="dataTable-0" class="table table-striped table-bordered" style="width:100%">
+
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+<div class="row mb-4">
+  <div class="col-md-12 col-lg-12 col-sm-12">
+    <div class="card shadow charts-container bg-white py-4 px-4 mx-2">
+      <h4 style="color: #000">Student Gender Distribution</h4>
+      <hr />
+
+      <div class="progress">
+        <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </app-app-layout>
 
