--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   z-index: 10000;
   top:0;
   left: 0;
@@ -85,4 +86,19 @@
 
 .is-invalid{
   border: 2px solid #ff0000 !important;
+}
+
+.select2{
+  width: 100% !important;
+}
+
+.ion{
+  padding-right: 6px;
+}
+body{
+  overflow-y: auto !important;
+  font-family: Arial, Helvetica, sans-serif;
+}
+html:not(.hydrated) body{
+  display: block !important;
 }
